Discount in Invoice and Done delivery list, Customer Map Url update in Delivery Portal

--- a/meta_organik_invoice/report/invoice_report.xml
+++ b/meta_organik_invoice/report/invoice_report.xml
@@ -3,10 +3,12 @@
 
     <template inherit_id="web.external_layout_standard" id="organik_chicken_invoice_report_logo">
         <xpath expr="//div[1]" position="replace">
-            <div t-attf-class="header o_company_#{company.id}_layout" t-att-style="report_header_style">
+            <div t-attf-class="header o_company_#{company.id}_layout"
+                t-att-style="report_header_style">
                 <div class="row">
                     <div class="mb4 d-flex justify-content-center align-items-center">
-                        <img t-if="company.logo" t-att-src="image_data_uri(company.logo)" style="max-height: 85px;" alt="Logo"/>
+                        <img t-if="company.logo" t-att-src="image_data_uri(company.logo)"
+                            style="max-height: 85px;" alt="Logo" />
                     </div>
                 </div>
             </div>
@@ -14,7 +16,7 @@
     </template>
 
     <template id="organik_chicken_invoice_report" inherit_id="account.report_invoice_document">
-        <xpath expr="//div[hasclass('row')]" position="replace"/>
+        <xpath expr="//div[hasclass('row')]" position="replace" />
         <xpath expr="//div[hasclass('page')]/h2" position="attributes">
             <attribute name="style">display: none;</attribute>
         </xpath>
@@ -22,21 +24,25 @@
             <attribute name="style">display: none;</attribute>
         </xpath>
         <xpath expr="//div[@id='informations']" position="after">
-            <div style="font-size: 10px; margin-top: -14px;">
+            <div
+                style="font-size: 11px; margin-top: -14px; font-style: italic; font-family: 'Arial Narrow', sans-serif;">
                 <div style="text-align: center;">
                     <span t-esc="o.line_ids.sale_line_ids.order_id.name" />
                 </div>
                 <div style="padding-top: 10px; padding-bottom: 10px;">
                     <t>Name:</t>
-                    <span t-esc="o.line_ids.sale_line_ids.order_id.partner_id.name" style="font-weight: bold;"/>
-                    <br/>
+                    <span t-esc="o.line_ids.sale_line_ids.order_id.partner_id.name"
+                        style="font-weight: bold;" />
+                    <br />
                     <t style="padding-top: 5px;">Mobile:</t>
-                    <span t-esc="o.line_ids.sale_line_ids.order_id.partner_id.phone" t-if="o.line_ids.sale_line_ids.order_id.partner_id.phone"/>
+                    <span t-esc="o.line_ids.sale_line_ids.order_id.partner_id.phone"
+                        t-if="o.line_ids.sale_line_ids.order_id.partner_id.phone" />
                 </div>
 
             </div>
         </xpath>
-        <!--Communication and Comment -->
+        <!--Communication
+        and Comment -->
         <xpath expr="//p[@name='payment_communication']" position="attributes">
             <attribute name="style">display: none;</attribute>
         </xpath>
@@ -46,79 +52,146 @@
         <xpath expr="//div[@name='payment_term']" position="attributes">
             <attribute name="style">display: none;</attribute>
         </xpath>
-        <!--Invoice line Table-->
+        <!--Invoice
+        line Table-->
         <xpath expr="//table[@name='invoice_line_table']" position="replace">
-            <table class="table table-sm o_main_table table-borderless" name="invoice_line_table">
-                <tbody class="invoice_tbody" style="border-top: 1px solid black; font-size: 10px;">
-                    <t t-set="current_subtotal" t-value="0"/>
-                    <t t-set="lines" t-value="o.invoice_line_ids.sorted(key=lambda l: (-l.sequence, l.date, l.move_name, -l.id), reverse=True)"/>
+            <table class="table-borderless" name="invoice_line_table"
+                style="width: 100%; margin-bottom: 10px; margin-top: 5px;">
+                <tbody class="invoice_tbody"
+                    style="font-size: 12px; width: 100%; font-style: italic; font-family: 'Arial Narrow', sans-serif; margin-left: 5px;">
+                    <div style="border-top: 1px solid black;" />
+                    <t t-set="current_subtotal" t-value="0" />
+                    <t t-set="lines"
+                        t-value="o.invoice_line_ids.sorted(key=lambda l: (-l.sequence, l.date, l.move_name, -l.id), reverse=True)" />
 
                     <t t-foreach="lines" t-as="line">
                         <t t-if="line.product_id.id != 1">
-                            <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
-                            <t t-set="current_subtotal" t-value="current_subtotal + line.price_total" groups="account.group_show_line_subtotals_tax_included"/>
-
-                            <tr t-att-class="'bg-200 fw-bold o_line_section' if line.display_type == 'line_section' else 'fst-italic o_line_note' if line.display_type == 'line_note' else ''">
-                                <t name="account_invoice_line_accountable">
-                                    <td name="account_invoice_line_name">
-                                        <span t-field="line.product_id.name" style="font-weight: bold;"/>
-                                        <br/>
-                                        <span t-esc="line.quantity"/> * <span t-esc="line.price_unit"/> <span style="margin-left: 115px;" t-esc="line.price_total"/>
-                                    </td>
-                                </t>
+                            <tr style="width: 100%;">
+                                <td style="width: 100%;">
+                                    <span t-field="line.product_id.name" style="font-weight: bold;" />
+                                </td>
+                                <td>
+                                    <span> </span>
+                                </td>
+                            </tr>
+                            <tr style="width: 100%;">
+                                <td colspan="2">
+                                    <span t-esc="line.quantity" /> x <span t-esc="line.price_unit" />
+                                </td>
+                                <td style="text-align: right;">
+                                    <span t-esc="line.quantity * line.price_unit" />
+                                </td>
                             </tr>
                         </t>
                     </t>
+
                 </tbody>
             </table>
         </xpath>
 
         <xpath expr="//div[@id='total']" position="replace">
             <div id="total" class="row">
-                <table class="table table-sm table-borderless" style="page-break-inside: avoid; margin-right: 10px; font-size: 10px;">
+                <table class="table table-sm table-borderless"
+                    style="page-break-inside: avoid; margin-right: 10px; font-size: 11px; font-style: italic; font-family: 'Arial Narrow', sans-serif;">
 
-                    <!--Tax totals-->
-                    <t t-set="tax_totals" t-value="o.tax_totals"/>
+                    <!--Tax
+                    totals-->
+                    <t t-set="tax_totals" t-value="o.tax_totals" />
+                    <t t-set="current_subtotal" t-value="0" />
+                    <t t-set="delivery_amount" t-value="0" />
                     <t>
                         <t t-foreach="lines" t-as="line">
-                            <t t-if="line.product_id.id == 1">
-                                <tr>
-                                    <td><strong>Delivery Fee</strong></td>
+                            <t t-set="current_subtotal" t-value="current_subtotal + (line.quantity * line.price_unit)" />
+                            <t t-set="dis_amount" t-value="round((current_subtotal * line.discount)/100)" />
+                            <t t-if="line.product_id.id == 1" t-set="delivery_amount" t-value="line.price_total" />
+                        </t>
+
+                        <tr class="border-black o_total"
+                            style="font-size: 12px; font-weight: bold; font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                            <td>
+                                <strong>Total</strong>
+                            </td>
+                            <td class="text-end">
+                                <span t-esc="round(current_subtotal)" />
+                            </td>
+                        </tr>
+
+                        <tr
+                            style="font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                            <td>
+                                <span>Discount</span>
+                            </td>
+                            <td t-if="dis_amount" class="text-end">
+                                (-) <span t-esc="dis_amount" />
+                            </td>
+                            <td t-else="" class="text-end">(-) 0.00</td>
+                        </tr>
+
+                        <tr
+                            style="font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                            <td>
+                                <span>Delivery Fee</span>
+                            </td>
+                            <td t-if="delivery_amount" class="text-end">
+                                (+) <span t-esc="delivery_amount" />
+                            </td>
+                            <td t-else="" class="text-end">
+                                (+) <span>0.00</span>
+                            </td>
+                        </tr>
+                        <!-- </t> -->
+
+                        <!--Total
+                        amount with all taxes-->
+                        <!-- <tr class="border-black o_total" style="font-size: 12px; font-weight:
+                        bold; font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                            <td><strong>Total</strong></td>
+                            <td  class="text-end">
+                                <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded'
+                        in tax_totals"/>
+                                <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
+                            </td>
+                        </tr> -->
+
+                        <!-- <t t-foreach="lines" t-as="line">
+                            <t t-if="line.discount">
+                                <tr style="font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                                    <td><strong>Discount</strong></td>
                                     <td class="text-end">
-                                        <span t-esc="line.price_total"/>
+                                        <span t-esc="line.discount"/>
                                     </td>
                                 </tr>
                             </t>
-                        </t>
-
-                        <!--Total amount with all taxes-->
-                        <tr class="border-black o_total" style="font-size: 11px; font-weight: bold;">
-                            <td><strong>Total</strong></td>
-                            <td  class="text-end">
-                                <span t-esc="tax_totals['formatted_amount_total_rounded']" t-if="'formatted_amount_total_rounded' in tax_totals"/>
-                                <span t-esc="tax_totals['formatted_amount_total']" t-else=""/>
-                            </td>
-                        </tr>
+                        </t> -->
 
                     </t>
 
                     <!--Payments-->
                     <t t-if="print_with_payments">
                         <t t-if="o.payment_state != 'invoicing_legacy'">
-                            <t t-set="payments_vals" t-value="o.sudo().invoice_payments_widget and o.sudo().invoice_payments_widget['content'] or []"/>
+                            <t t-set="payments_vals"
+                                t-value="o.sudo().invoice_payments_widget and o.sudo().invoice_payments_widget['content'] or []" />
                             <t>
-                                <tr>
-                                    <td><strong>Prev Due</strong></td>
+                                <tr
+                                    style="font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                                    <td>
+                                        <strong>Prev Due</strong>
+                                    </td>
                                     <td class="text-end">
-                                        <span t-field="o.line_ids.sale_line_ids.order_id.partner_id.total_due"/>
+                                        (+) <span
+                                            t-esc="str(int(o.line_ids.sale_line_ids.order_id.prev_due))" />
                                     </td>
                                 </tr>
                             </t>
                             <t>
-                                <tr class="border-black" style="font-size: 11px; font-weight: bold;">
-                                    <td><strong>Total Payable</strong></td>
+                                <tr class="border-black"
+                                    style="font-size: 12px; font-weight: bold; font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                                    <td>
+                                        <strong>Total Payable</strong>
+                                    </td>
                                     <td class="text-end">
-                                        <span t-field="o.line_ids.sale_line_ids.order_id.total_payable"/>
+                                        <span
+                                            t-esc="str(int(o.line_ids.sale_line_ids.order_id.total_payable))" />
                                     </td>
                                 </tr>
                             </t>
@@ -128,16 +201,21 @@
                                         <i class="oe_form_field text-begin oe_payment_label">Received CASH</i>
                                     </td>
                                     <td class="text-end">
-                                        <span t-field="o.line_ids.sale_line_ids.order_id.paid_amount"/>
+                                        (-)<span
+                                            t-esc="str(int(o.line_ids.sale_line_ids.order_id.receipt_paid))" />
                                     </td>
                                 </tr>
                             </t>
 
                             <t>
-                                <tr class="border-black" style="font-size: 11px; font-weight: bold;">
-                                    <td><strong>Total Due</strong></td>
+                                <tr class="border-black"
+                                    style="font-size: 12px; font-weight: bold; font-style: italic;">
+                                    <td>
+                                        <strong>Total Due</strong>
+                                    </td>
                                     <td class="text-end">
-                                        <span t-field="o.line_ids.sale_line_ids.order_id.final_due"/>
+                                        <span
+                                            t-esc="str(int(o.line_ids.sale_line_ids.order_id.final_due))" />
                                     </td>
                                 </tr>
                             </t>
@@ -147,14 +225,28 @@
 
             </div>
             <div>
-                <div style="font-size: 10px; text-align: center;">
-                    <t>BKash Merchant :</t>
-                    <span t-esc="o.line_ids.sale_line_ids.order_id.bkash_merchant" t-if="o.line_ids.sale_line_ids.order_id.bkash_merchant"/>
+                <div
+                    style="font-size: 13px; text-align: center; font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                    <span t-esc="o.line_ids.sale_line_ids.order_id.inv_msg"
+                        t-if="o.line_ids.sale_line_ids.order_id.inv_msg" />
                 </div>
-                <div style="font-size: 8px; padding-top: 10px;">
-                    <t>Delivered By :</t>
-                    <span t-esc="o.line_ids.sale_line_ids.order_id.delivery_man.name"/>
-                    <span style="margin-left: 30px;" t-esc="o.line_ids.sale_line_ids.order_id.current_datetime"/>
+                <div
+                    style="font-size: 8px; padding-top: 10px; font-style: italic; font-family: 'Arial Narrow', sans-serif;">
+                    <table class="table-borderless"
+                        style="width: 100%; margin-bottom: 10px; margin-top: 5px;">
+                        <tbody>
+                            <tr style="width: 100%;">
+                                <td colspan="2">
+                                    <t>Delivered By :</t>
+                                    <span
+                                        t-esc="o.line_ids.sale_line_ids.order_id.delivery_man.name" />
+                                </td>
+                                <td style="text-align: right;">
+                                    <span t-esc="o.line_ids.sale_line_ids.order_id.current_datetime" />
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </xpath>
